--- a/portfolio-site/css/style.css
+++ b/portfolio-site/css/style.css
@@ -10,6 +10,15 @@ Off-white #f6f6f6
 
 /*GOBAL STYLES
 ____________________________________________*/
+/*
+    https://www.paulirish.com/2012/box-sizing-border-box-ftw/
+*/
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
 
 body {
     background: #f6f6f6;
@@ -64,4 +73,17 @@ ____________________________________________*/
 footer {
     background: #222;
     color: #d3d4d6
+}
+
+.socials {
+    list-style-type: none;
+    padding: 0;
+}
+.socials li{
+    display: inline-block;
+}
+
+.socials img {
+    width: 32px;
+
 }
