--- a/portfolio-site/css/style.css
+++ b/portfolio-site/css/style.css
@@ -20,6 +20,10 @@ html {
     box-sizing: inherit;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     background: #f6f6f6;
 }
@@ -44,6 +48,12 @@ footer a:hover {
     text-decoration: none;
 }
 
+.content-wrapper {
+    margin: 0 auto;
+    padding: 30px;
+    max-width: 900px;
+}
+
 /*HOME
 ____________________________________________*/
 .home {
@@ -57,9 +67,39 @@ ____________________________________________*/
 
 /*RESUME
 ____________________________________________*/
+.resume header::before {
+    background: url(../images/bg-home-office-studio.jpg) center;
+    background-size: cover;
+    content: "";
+    display: block;
+    height: 375px;
+}
+
+.resume-section {
+    margin-bottom: 50px;
+}
+
+.resume-section h2 {
+    border-bottom: 2px dashed #d3d4d6;
+}
+
+.download-link {
+    position: fixed;
+    top: 5px;
+    left: 5px;
+}
 
 /*PROFILE
 ____________________________________________*/
+.project-item{
+    display: flow-root;
+    margin: 30px 0;
+}
+.project-item img {
+    width: 300px;
+    float: left;
+    margin-right: 20px;
+}
 
 /*WORK EXPERIENCE
 ____________________________________________*/
