--- a/portfolio-site/css/style.css
+++ b/portfolio-site/css/style.css
@@ -97,6 +97,14 @@ ____________________________________________*/
         padding: 30px;
 
 }
+@media screen and (max-width:650px){
+    .home .content-wrapper {
+        padding: 10px;
+    }
+    .content-bg {
+        padding: 20px;
+    }
+}
 
 
 /*RESUME
@@ -123,6 +131,23 @@ ____________________________________________*/
     left: 5px;
     font-size: 1.5rem;
 }
+@media screen and (max-width:1200px) {
+    .download-link{
+        position: absolute;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .resume header::before {
+        height: 200px;
+    }
+    h1 {
+        font-size: 5rem;
+    }
+    h2 {
+        font-size: 2.6rem;
+    }
+}
 
 /*PROJECTS
 ____________________________________________*/
@@ -141,7 +166,7 @@ ____________________________________________*/
     margin-right: 20px;
     }
 }
-@media screen and (max-width:859px){
+@media screen and (min-width:650px) and (max-width:859px){
     .project-wrapper {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -151,21 +176,31 @@ ____________________________________________*/
         width: 100%;
     }
 }
-
+@media screen and (max-width:500px){
+    .project-item img {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+}
 
 /*WORK EXPERIENCE
 ____________________________________________*/
 .work-item {
-    display: grid;
-    grid-template-columns: 300fr 1fr;
-    column-gap: 20px;
     margin: 30px 0;
 }
 .work-details p {
     margin: 0;
 }
-.work-summary p:first-child {
+
+@media screen and (min-width:860px){
+    .work-item {
+    display: grid;
+    grid-template-columns: 300fr 1fr;
+    column-gap: 20px;
+    }
+    .work-summary p:first-child {
     margin-top: 0;
+}
 }
 
 /*EDUCATION
@@ -184,9 +219,6 @@ ____________________________________________*/
 footer {
     background: #222;
     color: #d3d4d6;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
 }
 
 .socials {
@@ -203,4 +235,18 @@ footer {
 }
 .socials img:hover {
     opacity: 0.5px;
+}
+
+@media screen and (min-width:860px) {
+    footer {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 20px;
+    }
+}
+@media screen and (max-width:859px){
+    footer {
+        text-align: center;
+        padding: 10px;
+    }
 }
