--- a/Sound-Media/css/style.css
+++ b/Sound-Media/css/style.css
@@ -5,6 +5,15 @@ canvas {
     z-index: -1;
 }
 
-#play-button {
+#play-button,
+#pause-button,
+#volume-slider,
+#volume-label {
     visibility: hidden;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
